Jmol.___JmolVersion="16.1.16" // (swingJS) also 16.1.15 (legacy)
bug fix: draw SYMMETRY for linear molecules indicates C2 or D2 rather
than C_infinity
bug fix: incommensurately modulated CIF files fail with certain Fourier
coefficient methods
         (broken when "id" was added to the registry keys for MSCIF file
records).
bug fix: set picking assignatom_P  (specifically phosphorus) fails
bug fix: unitcell SURFACE fails in some cases

new feature: MINIMIZE SELECT {atoms}
 - Minimizes a set of atoms within the context of atoms around those
atoms.
 - The surrounding atoms will not be moved, but the forces they apply to
   the selected atoms will be part of the calculation.
 - for example:

	set appendnew false
	load $water
	load append $acetone
	minimize SELECT {water}

    # The water molecule is moved away from
    # the acetone molecule during minimization.
    # The acetone molecule is not moved.

new feature: MINIMIZE GROUP {atoms}
 - minimizes a group such as CH3 ignoring all other atoms but without
modifying the bond to its connecting atom
 - for example:

     load $caffeine
     minimize GROUP {within(smarts, "[C][H]")}
     # the H atoms of the three CH3 groups will move ever so slightly
     # the C atoms will not move

new feature: MINIMIZE ONLY {atoms}
 - Minimizes a set of atoms ignoring all other atoms.
 - Useful if minimizing a small molecule near a surface, for example,
   without having it drift away from the surface due to VDW repulsion.

 - If a molecular fragment, UFF force field will be used.
 - Default option for MINIMIZE {atoms}
 - for example:

     load $caffeine
     minimize ONLY {within(smarts, "C=O")}

     # the C=O groups will be moved around as though
     # they were not connected to the rest of the molecule

NOTE: the MINIMIZE command has subtly different SELECT options:

  minimize ONLY {water}      // atoms are minimized independently of any
other atoms
  minimize GROUP {water}     // same as {water} but connected bonds are
not ch